--- a/css/style.css
+++ b/css/style.css
@@ -47,9 +47,14 @@ address {
     display: flex;
 }
 
-.header {}
+.header {
+    border-bottom: 1px solid #e7e9fc;
+}
 
-.header-nav {}
+.header-nav {
+    display: flex;
+    align-items: center;
+}
 
 .header-logo {
     color: #4D5AE5;
@@ -59,15 +64,21 @@ address {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    margin-right: 76px
 }
 
 .header-logo-aside {
     color: #2E2F42;
 }
 
-.header-nav-list {}
+.header-nav-list {
+    display: flex;
+    gap: 40px;
+}
 
-.header-nav-item {}
+.header-nav-item {
+    padding: 24px 0;
+}
 
 .header-nav-link {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -77,11 +88,21 @@ address {
     letter-spacing: 0.02em;
 }
 
+.header-nav-link:hover,
+.header-nav-link:focus {
+    color: #404bbf;
+}
+
 .header-adress {}
 
-.header-adress-list {}
+.header-adress-list {
+    display: flex;
+    gap: 40px;
+}
 
-.header-adress-item {}
+.header-adress-item {
+    padding: 24px 0;
+}
 
 .header-adress-link {
     color: var(--SLATE, #434455);
@@ -91,10 +112,16 @@ address {
     letter-spacing: 0.02em;
 }
 
+.header-adress-link:hover,
+.header-adress-link:focus {
+    color: #404bbf;
+}
+
 .main {}
 
 .hero {
     background-color: #2e2f42;
+    padding: 188px 0;
 }
 
 .hero-title {
@@ -104,6 +131,7 @@ address {
     font-weight: 700;
     line-height: 1.07;
     letter-spacing: 0.02em;
+    max-width: 496px;
 }
 
 .hero-btn {
@@ -116,17 +144,42 @@ address {
         cursor: pointer;
         border-radius: 4px;
         box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+    display: block;
+    min-width: 169px;
+    height: 56px;
+    bottom: none;
+    border-radius: 4px;
 }
 
 .hero-btn:hover,
 .hero-btn:focus {
     background-color: #404BBF;
 }
-.section-two {}
+.section-two {
+    padding: 120px 0;
+}
 
-.section-two-list {}
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
 
-.section-two-item {}
+.section-two-list {
+    display: flex;
+    gap: 24px;
+}
+
+.section-two-item {
+    width: calc((100% - 72px) / 4);
+}
 
 .section-two-title {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -134,6 +187,7 @@ address {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .section-two-text {
@@ -146,6 +200,7 @@ address {
 
 .team {
     background-color: #F4F4FD;
+    padding: 120px 0;
 }
 
 .team-title {
@@ -156,15 +211,25 @@ address {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
 .team-list {
-    background-color: #FFFFFF;
+    display: flex;
+    gap: 24px;
 }
 
-.team-item {}
+.team-item {
+    background-color: #FFFFFF;
+    width: calc((100% - 72px) / 4);
+    border-radius: 0px 0px 4px 4px;
+}
 
 .team-item-img {}
+
+.team-item-container {
+    padding: 32px 0;
+}
 
 .team-item-title {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -173,6 +238,7 @@ address {
     font-weight: 500;
     line-height: 1.2;
     letter-spacing: 0.02em;
+    margin-bottom: 8px;
 }
 
 .team-item-text {
@@ -186,7 +252,10 @@ address {
 
 .team-item {}
 
-.portfolio {}
+.portfolio {
+    padding-top: 120px;
+    padding-bottom: 120px;
+}
 
 .portfolio-title {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -196,20 +265,36 @@ address {
     line-height: 1.11;
     letter-spacing: 0.02em;
     text-transform: capitalize;
+    margin-bottom: 72px;
 }
 
-.portfolio-list {}
+.portfolio-list {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 24px;
+    row-gap: 48px;
+}
 
-.portfolio-list-item {}
+.portfolio-list-item {
+    width: calc((100% - 48px) / 3);
+}
 
 .portfolio-item-img {}
+
+.portfolio-item-container {
+    padding: 32px 16px;
+    border: 1px solid #e7e9fc;
+    border-top: none;
+}
 
 .portfolio-item-title {
     color: var(--SLATE, #434455);
     font-size: 16px;
     font-weight: 400;
     line-height: 1.5;
-    letter-spacing: 0.02em;}
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;
+}
 
 .portfolio-item-text {
     color: var(--SLATE, #434455);
@@ -221,16 +306,19 @@ address {
 
 .footer {
     background-color: #2e2f42;
+    padding: 100px 0;
 }
 
 .footer-logo {
     color: var(--IRIS, #4D5AE5);
-        font-family: 'Raleway';
-        font-size: 18px;
-        font-weight: 700;
-        line-height: 1.17;
-        letter-spacing: 0.03em;
-        text-transform: uppercase;
+    font-family: 'Raleway';
+    font-size: 18px;
+    font-weight: 700;
+    line-height: 1.17;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    display: inline-block;
+    margin-bottom: 16px;
 }
 
 .footer-logo-aside {
@@ -239,8 +327,9 @@ address {
 
 .footer-text {
     color: var(--CLOUD, #F4F4FD);
-        font-size: 16px;
-        font-weight: 400;
-        line-height: 1.5;
-        letter-spacing: 0.02em;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    max-width: 264px;
 }
