--- a/css/style.css
+++ b/css/style.css
@@ -93,18 +93,18 @@ address {
     color: #404bbf;
 }
 
-.header-adress {}
+.header-address {}
 
-.header-adress-list {
+.header-address-list {
     display: flex;
     gap: 40px;
 }
 
-.header-adress-item {
+.header-address-item {
     padding: 24px 0;
 }
 
-.header-adress-link {
+.header-address-link {
     color: var(--SLATE, #434455);
     font-size: 16px;
     font-weight: 400;
@@ -112,8 +112,8 @@ address {
     letter-spacing: 0.02em;
 }
 
-.header-adress-link:hover,
-.header-adress-link:focus {
+.header-address-link:hover,
+.header-address-link:focus {
     color: #404bbf;
 }
 
@@ -267,7 +267,7 @@ address {
     text-transform: capitalize;
     margin-bottom: 72px;
 }
-
+d
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
