--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h4,
 h5,
 h6,
 p {
-    margin: 0;
+    margin: 0 auto;
 }
 
 ul {
@@ -93,7 +93,9 @@ address {
     color: #404bbf;
 }
 
-.header-address {}
+.header-address {
+    margin: 0 auto;
+}
 
 .header-address-list {
     display: flex;
@@ -132,6 +134,7 @@ address {
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
+    padding-bottom: 48px;
 }
 
 .hero-btn {
@@ -149,6 +152,7 @@ address {
     height: 56px;
     bottom: none;
     border-radius: 4px;
+    margin: 0 auto;
 }
 
 .hero-btn:hover,
@@ -267,7 +271,7 @@ address {
     text-transform: capitalize;
     margin-bottom: 72px;
 }
-d
+
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
