--- a/css/style.css
+++ b/css/style.css
@@ -100,10 +100,10 @@ address {
 .header-address-list {
     display: flex;
     gap: 40px;
+    padding: 24px 0;
 }
 
 .header-address-item {
-    padding: 24px 0;
 }
 
 .header-address-link {
@@ -150,7 +150,7 @@ address {
     display: block;
     min-width: 169px;
     height: 56px;
-    bottom: none;
+    border: none;
     border-radius: 4px;
     margin: 0 auto;
 }
