--- a/css/style.css
+++ b/css/style.css
@@ -85,6 +85,7 @@ address {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
+    padding: 24px 0;
 }
 
 .header-nav-link:hover,
