--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@ h4,
 h5,
 h6,
 p {
-    margin: 0 auto;
+    margin: 0;
 }
 
 ul {
@@ -74,10 +74,12 @@ address {
 .header-nav-list {
     display: flex;
     gap: 40px;
-    padding: 24px 0;
 }
 
-.header-nav-item {}
+.header-nav-item {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
 
 .header-nav-link {
     color: var(--NAVY-BLUE, #2E2F42);
@@ -85,7 +87,8 @@ address {
     font-weight: 500;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    padding: 24px 0;
+    display: block;
+
 }
 
 .header-nav-link:hover,
@@ -94,8 +97,7 @@ address {
 }
 
 .header-address {
-    margin: 0 auto;
-    padding: 24px 0;
+    margin-left: auto;
 }
 
 .header-address-list {
@@ -104,6 +106,8 @@ address {
 }
 
 .header-address-item {
+    padding-top: 24px;
+    padding-bottom: 24px;
 }
 
 .header-address-link {
@@ -134,7 +138,9 @@ address {
     line-height: 1.07;
     letter-spacing: 0.02em;
     max-width: 496px;
-    padding-bottom: 48px;
+    margin-bottom: 48px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .hero-btn {
@@ -292,13 +298,14 @@ address {
 }
 
 .portfolio-item-title {
-    color: var(--SLATE, #434455);
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 1.5;
+    color: var(--NAVY-BLUE, #2E2F42);
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
     letter-spacing: 0.02em;
     margin-bottom: 8px;
 }
+
 
 .portfolio-item-text {
     color: var(--SLATE, #434455);
@@ -307,6 +314,7 @@ address {
     line-height: 1.5;
     letter-spacing: 0.02em;
 }
+
 
 .footer {
     background-color: #2e2f42;
